@@ -9,6 +9,8 @@ Version 3.1-2
  o Fixed bug in Effect.clm() and some other methods (reported by David Barron), which didn't pass ... argument.
  
  o A warning is now printed if partial residuals are requested in a multiline plot.
+ 
+ o Corrected plotting of partial residuals with various scalings of the y-axis. 
 
 Version 3.1-1
 
